# cis680_clip_study

./: .gitignore  CLAUDE.md  README.md  justfile  main.py  ncut_test.py  plan.md  pyproject.toml
configs/: coco_cka.toml  coco_clip_svd.toml  coco_svd.toml  eval_coco_cka.toml  eval_coco_clip_svd.toml  eval_only.toml  sanity_check.toml  winoground_cka.toml
reports/: Untitled  bibliography.bib  final_report.typ  mid_progress_report.typ
src/engineered_latents/: benchmarking.py  compute_clip_scores.py  config.py  context.py  data.py  metrics.py  run_cuts.py  train.py  type_defs.py  utils.py
src/engineered_latents/losses/: cluster_loss.py
src/engineered_latents/visualization/: __init__.py  ncut.py  visualize.py
