[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "engineered-latents"
version = "0.1.0"
description = "Engineered Latents for CLIP via Nystrom algned cutting"
readme = "README.md"
requires-python = ">=3.10.13"
dependencies = [
    "einops",
    "ncut-pytorch",
    "lightning",
    "torch",
    "torchvision",
    "transformers",
    "datasets",
    "matplotlib",
    "tqdm",
]

[tool.setuptools.packages.find]
where = ["src"]


[tool.ruff.lint]
select = [
    "E",
    "F", 
    "UP",
    "I",
    "C901",
    "B",
    "C4",
    "RUF",
    "PIE",
    "PL",
    "TCH",
    "SIM",
]


ignore = [
    "SIM103",   # return bool(x) — sometimes clearer to be explicit
    "SIM110",   # any() — sometimes for loop is clearer
    "SIM115",   # context manager for open — not always wanted
    "PLR0913",  # too many args
    "PLR2004",  # magic values
    "E501", # line too long
    "RUF009", # dataclass defaults are ok with draccus
    "PLR0915", # too many statements in function
    "PLW2901",  # loop var overwrite 
]