[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "engineered-latents"
version = "0.1.0"
description = "Engineered Latents for CLIP via Nystrom algned cutting"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=2.14,<3.0",
    "draccus>=0.11.5",
    "einops>=0.8.1",
    "lightning>=2.5.6",
    "matplotlib>=3.10.7",
    "ncut-pytorch>=2.3.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "lovely-tensors>=0.1.20",
    "aim>=3.29.0",
]

[dependency-groups]
dev = [
    "pyrefly",
    "torchfix>=0.7.0",
]


[tool.setuptools.packages.find]
where = ["src"]


[tool.ruff.lint] 
select = [
    "E",
    "F", 
    "UP",
    "I",
    "C901",
    "B",
    "C4",
    "RUF",
    "PIE",
    "PL",
    "TCH",
    "SIM",
    "NPY",
]


ignore = [
    "SIM103",   # return bool(x) — sometimes clearer to be explicit
    "SIM110",   # any() — sometimes for loop is clearer
    "SIM115",   # context manager for open — not always wanted
    "PLR0913",  # too many args
    "PLR2004",  # magic values
    "E501", # line too long
    "RUF009", # dataclass defaults are ok with draccus
    "PLR0915", # too many statements in function
    "PLW2901",  # loop var overwrite 
]
